Prevent gear form from jumping.

--- a/static/css/astrobin.less
+++ b/static/css/astrobin.less
@@ -2758,6 +2758,7 @@ div.token-input-dropdown {
 
 .ui-multiselect {
     border-color: @border-top-color;
+    display: none;
 
     div.available {
         border-color: @border-top-color;
@@ -2799,6 +2800,12 @@ div.token-input-dropdown {
     }
     .ui-button-text {
         color: @link-color;
+    }
+}
+
+form#gear {
+    select {
+        display: none;
     }
 }
 
